[tool.poetry]
name = "crawlscheduler"
version = "0.1.0"
description = "crawl scheduler"
authors = ["woody <woody@aicess.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydotenv = "^0.0.7"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
colorama = "^0.4.6"
bs4 = "^0.0.2"
lxml = "^5.3.0"
schedule = "^1.2.2"
sqlalchemy = "^2.0.36"
psycopg = { extras = ["binary"], version = "^3.2.3" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
