[tool.poetry]
name = "crawlscheduler"
version = "0.1.0"
description = "crawl scheduler"
authors = ["woody <woody@aicess.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydotenv = "^0.0.7"
python-dotenv = "^1.2.2"
requests = "^2.34.2"
colorama = "^0.4.6"
bs4 = "^0.0.2"
lxml = "^6.1.1"
schedule = "^1.2.2"
sqlalchemy = "^2.0.50"
psycopg = {extras = ["binary"], version = "^3.3.4"}
paddleocr = "^3.7.0"
paddlepaddle = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
